2009-11-25  Darin Fisher  <darin@chromium.org>

Reviewed by Adam Barth.

        [Chromium] Unable to repost form data by hitting reload
        https://bugs.webkit.org/show_bug.cgi?id=31882

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::loadData):



Canonical link: https://commits.webkit.org/42823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51394 268f45cc-cd09-0410-ab3c-d52691b4dbfc